--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependency_overrides:
 dev_dependencies:
   flutter_lints: 4.0.0
   lints: 4.0.0
+  mockito: ^5.0.0
 
   flutter_test:
     sdk: flutter
