--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,10 +14,10 @@ workflows:
           flutter test
       - name: Build iOS
         script: |
-          flutter build ios --release
+          flutter build ipa --release --no-codesign
       - name: Build Android
         script: |
           flutter build apk --release
     artifacts:
-      - build/ios/ipa
+      - build/ios/ipa/*.ipa
       - build/app/outputs/flutter-apk/app-release.apk
